cmake_minimum_required(VERSION 3.12)
project(DataStructure)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructure main.cpp LinearList.h SeqList.h LinkedList.h CircList.h DblList.h StaticList.h Stack.h SeqStack.h LinkedStack.h Calculator.h Queue.h SeqQueue.h LinkedQueue.h PQueue.h Deque.h SeqDeque.h LinkedDeque.h Tree.h BinaryTree.h ThreadTree.h HuffmanTree.h DataList.h SearchList.h SortedList.h BST.h AVLTree.h Graph.h Graphmtx.h Graphlnk.h MinSpanTree.h UFSets.h MinHeap.h)